# computer-vison

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/images/reid/: galleryList.txt  queryList.txt
iAIAnalysisLib/: CMakeLists.txt  iAIAnalysisLib.cpp  iAIAnalysisLib.h
iAIAnalysisLib/include/: macro_define.h
iAIAnalysisLib/src/: CAIAnalysis.cpp
iAIAnalysisTest/: CMakeLists.txt
iAIAnalysisTest/include/: iAIAnalysisTest.h  macro_define.h  type_define.h
iAIAnalysisTest/src/: iAIAnalysisTest.cpp  iTorchReIDTest.cpp  iYoloV7Test.cpp  iYouReIDTest.cpp
iAICommonLib/: CMakeLists.txt
iAICommonLib/include/: CORTInferer.h  CORTPars.h  macro_define.h  type_define.h
iAICommonLib/src/: CORTInferer.cpp
iAIDetectorLib/: CMakeLists.txt
iAIDetectorLib/include/: CORTPars.h  CORTYoloV7.h  CObjDetector.h  CYoloV7.h  iAIDetector.h  macro_define.h  type_define.h
iAIDetectorLib/src/: CORTYoloV7.cpp  CObjDetector.cpp  CYoloV7.cpp  iAIDetector.cpp
iAIReIDLib/: CMakeLists.txt
iAIReIDLib/include/: CORTTorchReID.h  CORTYouReID.h  CReID.h  macro_define.h  type_define.h
iAIReIDLib/src/: CORTTorchReID.cpp  CORTYouReID.cpp  CReID.cpp
iVideoWriterLib/: CMakeLists.txt
iVideoWriterLib/include/: CVideoWriter.h  macro_define.h  type_define.h
iVideoWriterLib/src/: CVideoWriter.cpp
include/: CAIAnalysis.h  analysis_define.h  analysis_type.h  core_define.h  core_type.h
lib/onnxruntime/lib/: onnxruntime.lib  onnxruntime_providers_tensorrt.lib
lib/opencv/x64/vc16/lib/: OpenCVConfig-version.cmake  OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
models/torchreid/: osnet_x1_0_same_domain_d.onnx  osnet_x1_0_same_domain_m.onnx
models/yolo7/: yolov7-tiny_384x640.onnx  yolov7_480x640.onnx
models/youreid/: youreid_m.onnx
